add_subdirectory(runtime_compilation_test)
add_subdirectory(arr-test)
add_subdirectory(reduce-test)
add_subdirectory(overload-test)
add_subdirectory(field-arr-test)
add_subdirectory(2d-test)
add_subdirectory(planetest)
#TP: walker-test is not include by default since it needs Python env
#add_subdirectory(walker-test)
add_subdirectory(bwtest)
add_subdirectory(boundcond-migration-test)
add_subdirectory(kernel-fusion-test)
add_subdirectory(stencil-accesses-ok-test)
add_subdirectory(stencil-accesses-fail-test)
add_subdirectory(constant-values)
add_subdirectory(average-stencil)
