add_subdirectory(arr-test)
add_subdirectory(reduce-test)
add_subdirectory(mpi-profile-reduce)
add_subdirectory(field-arr-test)
add_subdirectory(1d-test)
add_subdirectory(2d-test)
add_subdirectory(planetest)
add_subdirectory(poisson-test)
#TP: walker-test is not include by default since it needs Python env
#add_subdirectory(walker-test)
if(NOT CPU_BUILD)
	add_subdirectory(bwtest)
endif()
add_subdirectory(kernel-fusion-test)
add_subdirectory(stencil-accesses-ok-test)
add_subdirectory(stencil-accesses-fail-test)
add_subdirectory(constant-values)
add_subdirectory(average-stencil)
add_subdirectory(use-scalar-reduce)
add_subdirectory(variable-dims)
add_subdirectory(ray-test)
add_subdirectory(fft-test)
