add_subdirectory(arr-test)
add_subdirectory(reduce-test)
add_subdirectory(mpi-profile-reduce)
add_subdirectory(field-arr-test)
add_subdirectory(1d-test)
add_subdirectory(2d-test)
add_subdirectory(planetest)
add_subdirectory(poisson-test)
#TP: walker-test is not include by default since it needs Python env
#add_subdirectory(walker-test)
if(NOT CPU_BUILD)
	add_subdirectory(bwtest)
endif()
if(FFT_ENABLED AND USE_CUDA)
	add_subdirectory(fft-shift-test)
endif()
add_subdirectory(kernel-fusion-test)
add_subdirectory(stencil-accesses-ok-test)
add_subdirectory(stencil-accesses-fail-test)
add_subdirectory(constant-values)
add_subdirectory(average-stencil)
add_subdirectory(use-scalar-reduce)
add_subdirectory(variable-dims)
add_subdirectory(ray-test)
add_subdirectory(ray-mpi-test)
add_subdirectory(fft-test)
add_subdirectory(sor-test)
add_subdirectory(iterative-refinement-test)
add_subdirectory(cg-test)
add_subdirectory(bicgstab-test)
add_subdirectory(multigrid-tests)
add_subdirectory(small-grid-test)
add_subdirectory(inplace_gaussian-test)
add_subdirectory(boundary-halo-exchange-test)
add_subdirectory(uneven-grid-test)
add_subdirectory(uneven-sor-test)
add_subdirectory(compact-poisson-test)
add_subdirectory(grid-calculation)
add_subdirectory(single-precision-test)
add_subdirectory(reduce-sum-add-test)
